# Recros

./: .gitignore  plan.md
ml/: README.md  config.mac_air.yaml  config.yaml  pyproject.toml  run_local.sh
ml/src/recros_ml/: __init__.py  build_features.py  config.py  evaluate.py  export.py  inference.py  train.py
ml/src/recros_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ml/src/recros_ml/features/: __init__.py  builder.py
ml/src/recros_ml/ingest/: __init__.py  __main__.py  loaders.py
ml/src/recros_ml/normalize/: __init__.py
